--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: relative; /* Để overlay nằm trên video */
         }
 
         /* Điều chỉnh chiều cao video cho thiết bị di động */
@@ -49,32 +48,16 @@
             width: 100%;
             max-width: 600px;
             height: auto;
-            max-height: 400px; /* Giảm chiều cao tối đa */
+            max-height: 400px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             transition: opacity 0.5s ease, transform 0.3s ease;
             object-fit: cover;
-            position: relative;
         }
 
         #capturedImage {
             display: none;
             opacity: 0;
-        }
-
-        /* Overlay để tạo khung mờ */
-        .overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 70%; /* Thu nhỏ từ 80% xuống 70% */
-            height: 70%; /* Thu nhỏ từ 80% xuống 70% */
-            transform: translate(-50%, -50%);
-            border: 4px dashed rgba(76, 175, 80, 0.7);
-            background-color: rgba(0, 0, 0, 0.2); /* Màu mờ */
-            pointer-events: none; /* Không can thiệp vào các sự kiện */
-            border-radius: 15px;
-            display: none; /* Ẩn mặc định */
         }
 
         .button-container {
@@ -123,21 +106,6 @@
         }
 
         @media (max-width: 600px) {
-            .zoom-container {
-                flex-direction: column;
-                align-items: stretch;
-            }
-
-            .zoom-container label,
-            .zoom-container span {
-                text-align: left;
-                width: auto;
-            }
-
-            .zoom-container input[type="range"] {
-                width: 100%;
-            }
-
             button {
                 width: 100%;
                 max-width: 220px;
@@ -160,21 +128,6 @@
             text-align: center;
             max-width: 600px;
             position: relative;
-        }
-
-        /* Khung mờ cho ý nghĩa biển báo */
-        #signMeaning::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1); /* Màu mờ */
-            backdrop-filter: blur(5px); /* Hiệu ứng mờ */
-            border-radius: 8px;
-            z-index: -1;
         }
 
         /* Loading Spinner Styles */
@@ -240,19 +193,6 @@
             text-align: right;
         }
 
-        /* Khung Mờ Cho Ý Nghĩa Biển Báo */
-        .meaning-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.3); /* Màu mờ */
-            border-radius: 8px;
-            z-index: -1;
-            display: none; /* Ẩn mặc định */
-        }
-
         /* Button để nghe lại ý nghĩa */
         #speakButton {
             background-color: #17a2b8;
@@ -277,7 +217,6 @@
         <h1>Nhận Diện Biển Báo Giao Thông</h1>
         <div style="position: relative; width: 100%; max-width: 600px;">
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
-            <div class="overlay"></div>
         </div>
         <img id="capturedImage" alt="Ảnh đã chụp">
         <canvas id="canvas" style="display: none;"></canvas>
@@ -303,11 +242,7 @@
             <div class="spinner"></div>
         </div>
         <div id="predictionResult" aria-live="polite">Kết quả nhận diện sẽ hiển thị ở đây.</div>
-        <div id="signMeaning" aria-live="polite">
-            <!-- Khung mờ cho ý nghĩa -->
-            <div class="meaning-overlay"></div>
-        </div>
-        <!-- Nút để nghe lại ý nghĩa biển báo -->
+        <div id="signMeaning" aria-live="polite"></div>
         <button id="speakButton" aria-label="Nghe lại ý nghĩa biển báo">Nghe Lại</button>
     </div>
 
@@ -320,7 +255,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
     <script>
-        // Lấy các phần tử từ DOM
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
         const captureButton = document.getElementById('captureButton');
@@ -333,64 +267,37 @@
         const loadingPrediction = document.getElementById('loadingPrediction');
         const zoomSlider = document.getElementById('zoomSlider');
         const zoomValue = document.getElementById('zoomValue');
-        const overlay = document.querySelector('.overlay'); // Lấy phần tử overlay
-        const speakButton = document.getElementById('speakButton'); // Nút nghe lại ý nghĩa
+        const speakButton = document.getElementById('speakButton');
         let stream = null;
-        let isProcessing = false; // Flag to prevent multiple processing
-
-        // Thông tin mô hình Teachable Machine
+        let isProcessing = false;
         const MODEL_URL = "https://teachablemachine.withgoogle.com/models/7y8Dc7os8/";
-
         let model, maxPredictions;
-
-        // Bản đồ mã biển báo và ý nghĩa tương ứng
         const signMeanings = {
-            "P.101": "Để báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn trong trường hợp người tham gia giao thông khó quan sát thấy đèn để kịp thời xử lý.",
-            "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên khi qua nơi giao nhau (trừ các loại xe được quyền ưu tiên theo quy định).",
-            // Thêm các mã biển báo khác ở đây
-            // "Code": "Ý nghĩa..."
+            "P.101": "Để báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn...",
+            "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên..."
         };
 
-        /**
-         * Hàm khởi chạy camera
-         */
         async function startCamera() {
             try {
                 stream = await navigator.mediaDevices.getUserMedia({
                     video: {
-                        facingMode: "environment",
-                        width: { ideal: 1280 },
-                        height: { ideal: 720 }
+                        facingMode: "environment"
                     },
                     audio: false
                 });
                 video.srcObject = stream;
                 video.onloadedmetadata = () => {
                     video.play();
+                    captureButton.disabled = false;
                 };
-                video.style.opacity = 1;
-                overlay.style.display = 'block'; // Hiển thị overlay khi camera mở
             } catch (err) {
                 console.error("Không thể truy cập camera: ", err);
                 alert("Không thể truy cập camera. Vui lòng kiểm tra quyền truy cập hoặc thiết bị của bạn.");
             }
         }
 
-        /**
-         * Hàm dừng camera
-         */
-        function stopCamera() {
-            if (stream) {
-                stream.getTracks().forEach(track => track.stop());
-            }
-            overlay.style.display = 'none'; // Ẩn overlay khi dừng camera
-        }
-
-        /**
-         * Hàm chụp ảnh với zoom
-         */
         async function capturePhoto() {
-            if (isProcessing) return; // Prevent multiple clicks
+            if (isProcessing) return;
             isProcessing = true;
             captureButton.disabled = true;
 
@@ -404,7 +311,6 @@
                     throw new Error("Video chưa sẵn sàng.");
                 }
 
-                // Tính toán kích thước và vị trí cắt dựa trên zoom
                 const scaledWidth = videoWidth / zoom;
                 const scaledHeight = videoHeight / zoom;
                 const sx = (videoWidth - scaledWidth) / 2;
@@ -420,13 +326,12 @@
                 capturedImage.style.opacity = 1;
                 video.style.opacity = 0;
                 video.style.display = 'none';
-                overlay.style.display = 'none'; // Ẩn overlay khi chụp ảnh
                 downloadButton.style.display = 'inline-block';
                 retakeButton.style.display = 'inline-block';
                 captureButton.style.display = 'none';
                 predictionResult.textContent = "";
                 signMeaning.textContent = "";
-                speakButton.style.display = 'none'; // Ẩn nút nghe lại khi chụp ảnh
+                speakButton.style.display = 'none';
                 loadingPrediction.style.display = 'flex';
                 await predictImage();
             } catch (error) {
@@ -434,17 +339,12 @@
                 alert("Đã xảy ra lỗi khi chụp ảnh. Vui lòng thử lại.");
             } finally {
                 isProcessing = false;
-                if (model) {
-                    captureButton.disabled = false;
-                }
+                captureButton.disabled = false;
             }
         }
 
-        /**
-         * Hàm tải ảnh xuống
-         */
         function downloadPhoto() {
-            if (!capturedImage.src) return; // Prevent download if no image
+            if (!capturedImage.src) return;
             const link = document.createElement('a');
             link.href = capturedImage.src;
             link.download = 'anh-chup.png';
@@ -453,9 +353,6 @@
             document.body.removeChild(link);
         }
 
-        /**
-         * Hàm chụp lại
-         */
         function retakePhoto() {
             capturedImage.style.display = 'none';
             capturedImage.style.opacity = 0;
@@ -466,18 +363,9 @@
             captureButton.style.display = 'inline-block';
             predictionResult.textContent = "Kết quả nhận diện sẽ hiển thị ở đây.";
             signMeaning.textContent = "";
-            speakButton.style.display = 'none'; // Ẩn nút nghe lại khi chụp lại
-            overlay.style.display = 'block'; // Hiển thị lại overlay khi chụp lại
-
-            // Clear canvas
-            const context = canvas.getContext('2d');
-            context.clearRect(0, 0, canvas.width, canvas.height);
+            speakButton.style.display = 'none';
         }
 
-        /**
-         * Hàm để nói văn bản tiếng Việt
-         * @param {string} text - Văn bản cần nói
-         */
         function speakText(text) {
             if (!('speechSynthesis' in window)) {
                 console.warn('Trình duyệt của bạn không hỗ trợ Speech Synthesis.');
@@ -486,45 +374,27 @@
 
             const synth = window.speechSynthesis;
             const utterThis = new SpeechSynthesisUtterance(text);
-
-            // Lấy danh sách giọng nói
             const voices = synth.getVoices();
-
-            // Chọn giọng nói tiếng Việt
             const vietnameseVoices = voices.filter(voice => voice.lang.startsWith('vi'));
 
             if (vietnameseVoices.length > 0) {
                 utterThis.voice = vietnameseVoices[0];
-            } else {
-                console.warn('Không tìm thấy giọng nói tiếng Việt. Sử dụng giọng mặc định.');
             }
 
             synth.speak(utterThis);
         }
 
-        /**
-         * Hàm tải mô hình Teachable Machine
-         */
         async function loadModel() {
-            const modelURLFull = MODEL_URL + "model.json";
-            const metadataURL = MODEL_URL + "metadata.json";
-
             try {
-                model = await tmImage.load(modelURLFull, metadataURL);
+                model = await tmImage.load(MODEL_URL + "model.json", MODEL_URL + "metadata.json");
                 maxPredictions = model.getTotalClasses();
-                console.log("Mô hình đã được tải thành công.");
                 loadingModel.style.display = 'none';
-                captureButton.disabled = false;
             } catch (err) {
                 console.error("Lỗi khi tải mô hình: ", err);
-                alert("Không thể tải mô hình nhận diện. Vui lòng kiểm tra kết nối mạng hoặc URL mô hình.");
                 loadingModel.textContent = "Không thể tải mô hình.";
             }
         }
 
-        /**
-         * Hàm nhận diện hình ảnh
-         */
         async function predictImage() {
             if (!model) {
                 predictionResult.textContent = "Mô hình chưa được tải. Vui lòng thử lại sau.";
@@ -535,54 +405,41 @@
             try {
                 const prediction = await model.predict(canvas);
                 if (prediction.length > 0) {
-                    // Sắp xếp các dự đoán theo xác suất giảm dần
                     prediction.sort((a, b) => b.probability - a.probability);
-                    // Lấy top prediction
                     const topPrediction = prediction[0];
                     predictionResult.innerHTML = `<span style="color: #28a745;">Kết quả: ${topPrediction.className} (${(topPrediction.probability * 100).toFixed(2)}%)</span>`;
-
-                    // Trích xuất mã biển báo từ kết quả nhận diện
-                    const signCode = topPrediction.className.substring(0, 5).toUpperCase(); // Đảm bảo mã là chữ hoa
+                    const signCode = topPrediction.className.substring(0, 5).toUpperCase();
                     if (signMeanings.hasOwnProperty(signCode)) {
                         const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
                         signMeaning.textContent = meaningText;
-                        speakButton.style.display = 'inline-block'; // Hiển thị nút nghe lại
-                        speakText(meaningText); // Đọc ra ý nghĩa biển báo
+                        speakButton.style.display = 'inline-block';
+                        speakText(meaningText);
                     } else {
                         signMeaning.textContent = "Ý nghĩa: Không tìm thấy ý nghĩa cho biển báo này.";
-                        speakButton.style.display = 'inline-block'; // Hiển thị nút nghe lại
+                        speakButton.style.display = 'inline-block';
                         speakText("Không tìm thấy ý nghĩa cho biển báo này.");
                     }
                 } else {
                     predictionResult.textContent = "Không có kết quả nhận diện.";
                     signMeaning.textContent = "";
-                    speakButton.style.display = 'none'; // Ẩn nút nghe lại nếu không có kết quả
+                    speakButton.style.display = 'none';
                 }
             } catch (err) {
                 console.error("Lỗi khi nhận diện hình ảnh: ", err);
                 predictionResult.textContent = "Lỗi khi nhận diện hình ảnh.";
                 signMeaning.textContent = "";
-                speakButton.style.display = 'none'; // Ẩn nút nghe lại nếu có lỗi
+                speakButton.style.display = 'none';
             } finally {
                 loadingPrediction.style.display = 'none';
             }
         }
 
-        // Sự kiện khi nhấn nút chụp ảnh
         captureButton.addEventListener('click', capturePhoto);
-
-        // Sự kiện khi nhấn nút tải ảnh xuống
         downloadButton.addEventListener('click', downloadPhoto);
-
-        // Sự kiện khi nhấn nút chụp lại
         retakeButton.addEventListener('click', retakePhoto);
-
-        // Sự kiện khi thay đổi zoom
         zoomSlider.addEventListener('input', () => {
             zoomValue.textContent = `${zoomSlider.value}x`;
         });
-
-        // Sự kiện khi nhấn nút nghe lại ý nghĩa biển báo
         speakButton.addEventListener('click', () => {
             const text = signMeaning.textContent || "";
             if (text) {
@@ -590,28 +447,20 @@
             }
         });
 
-        /**
-         * Tải danh sách giọng nói khi chúng đã sẵn sàng
-         */
-        function populateVoices() {
-            const synth = window.speechSynthesis;
-            const voices = synth.getVoices();
-            // Lưu trữ giọng nói tiếng Việt vào một biến global nếu cần
-            window.vietnameseVoices = voices.filter(voice => voice.lang.startsWith('vi'));
-        }
+        window.speechSynthesis.onvoiceschanged = function() {
+            window.speechSynthesis.getVoices();
+        };
 
-        // Thêm sự kiện khi danh sách giọng nói thay đổi
-        window.speechSynthesis.onvoiceschanged = populateVoices;
-
-        // Khởi chạy camera và tải mô hình khi trang được tải
         window.addEventListener('load', async () => {
-            populateVoices(); // Lấy giọng nói ngay khi trang tải
             await loadModel();
             startCamera();
         });
 
-        // Dừng camera khi rời khỏi trang
-        window.addEventListener('beforeunload', stopCamera);
+        window.addEventListener('beforeunload', () => {
+            if (stream) {
+                stream.getTracks().forEach(track => track.stop());
+            }
+        });
     </script>
 
 </body>
