--- a/index.html
+++ b/index.html
@@ -231,7 +231,10 @@
 
         const signMeanings = {
             "P.101": "Để báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn...",
-            "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên..."
+            "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên...",
+            "W.205": "Biển báo phía trước sắp đến nơi giao nhau của các tuyến đường cùng cấp (không có đường nào ưu tiên). Biển được đặt trước nơi đường giao nhau ở ngoài phạm vi nội thành, nội thị là chủ yếu",
+            "W.208": "Các xe đi trên đường có đặt biển số W.208 phải nhường đường cho xe đi trên đường ưu tiên...",
+            
         };
 
         // Khởi động camera
